fase_4/tech_challenge/toggle-master-microservices/eks/prometheus-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-internal-link
  namespace: toggle-master
spec:
  type: ExternalName
  externalName: prometheus.monitoring.svc.cluster.local
