fase_4/tech_challenge/toggle-master-microservices/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: toggle-master-ingress
  namespace: toggle-master
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  
spec:
  ingressClassName: nginx
  rules:
    - host: a45879d6e5b0c45e28e29b29d50afdeb-df8f7a21ec44886c.elb.us-east-1.amazonaws.com
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /flag(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
          - path: /targeting(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003
          - path: /evaluation(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
